sass/site.scss
/* #23211F */
$dark-bg: hsl(30, 7%, 13%);
$dark-txt: hsl(30, 7%, 13%);

/* #E5FFE5 */
$light-bg: hsl(120, 100%, 95%);

html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

* {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

blockquote, pre {
  background: $dark-bg;
  padding: 0.5rem 2rem;
  color: rgba(255, 255, 255, 0.6);
}

body {
  background: $light-bg;

  > header, > footer {
    background: $dark-bg;

    overflow: hidden;

    padding-top: 2rem;
    padding-bottom: 2rem;
    width: 100%;

    color: rgba(255, 255, 255, 0.8);
    font-weight: 400;
  }

  > footer {
    a {
      color: rgba(255, 255, 255, 0.5);
    }
  }
}

header > div, footer > div {
  display: grid;
  grid-column-gap: 1rem;
  grid-template-columns: repeat(4, 1fr);

  margin: 0 auto;
  width: 80vw;
}

header {
  .title {
    grid-column: 1 / span 4;
  }

  form {
    align-items: center;
    display: flex;

    fieldset {
      border: 0.3rem;

      button { display: none; }
      label { display: none; }

      input {
        background: url(/search.svg) no-repeat 6px 2px;
        background-size: 20px;

        border: 0;
        display: inline-block;

        height: 1.5rem;
        padding-left: 2rem;

        color: rgba(255, 255, 255, 0.6);

        font-size: 1rem;
        line-height: 1rem;
        text-align: left;
      }
    }
  }

  h1 {
    .logo {
      display: inline-block;
      height: 4rem;
      padding: 0 0.2rem;
      vertical-align: middle;
    }

    a {
      color: rgba(255, 255, 255, 0.8);
      display: inline-block;

      font-size: 3.2rem;
      font-weight: 400;

      vertical-align: middle;
    }
  }

  h2 {
    color: $dark-txt;

    font-size: 1.125rem;
    font-weight: 300;

    line-height: 1.5;
  }

  nav {
    font-size: 1.125rem;
    grid-column: 1 / span 3;
    padding: 1rem 0;

    a {
      color: rgba(255, 255, 255, 0.5);
    }

    ul {
      list-style: none;
      display: flex;
      justify-content: space-between;
      width: 50vw;
    }
  }
}

main {
  color: rgb(34, 34, 34);
  font-size: 1.2rem;
  line-height: 1.3;

  .meta {
    opacity: 0.5;
    font-size: 1rem;
  }

  > * {
    margin: 0 auto;
    padding: 2rem 0;
    width: 80vw;
  }

  *+* {
    margin-top: 1.8rem;
  }

  a {
    color: rgb(89, 117, 48);
    border-bottom: 1px solid rgba(185, 59, 46, 0.6);
  }

  h2, h3 {
    color: rgb(34, 34, 34);
    line-height: 1.1;
  }

  h2 {
    font-size: 2.4rem;
  }

  h3 {
    font-size: 2rem;
  }
}

footer {
  p {
    padding: 0.6rem 0;
  }

  .copyright {
    grid-column: 1 / span 4;
    text-align: center;
  }
}

/*
 *  Various style specific things I'm playing with
 */
.icon {
  display: inline-block;
  height: 1em;
  width: 1em;

  stroke: currentColor;
  fill: none;

  position: relative;
  top: 2px;
}

.page-links {
  margin-top: 2em;
}

.page-link {
  display: inline-block;
  padding: 0.25em 0.625em;

  &:first-child {
    padding-left: 0;
  }

  &:last-child {
    padding-right: 0;
  }

  &.current {
    font-weight: 700;
  }

  &.dots {
    padding: 0;
  }
}

/*
 * Visually hide an element, but leave it available for screen readers
 */
.screen-reader-text {
  position: absolute;

  clip: rect(0 0 0 0 );
  clip-path: inset(50%);

  height: 1px;
  width: 1px;

  border: 0;
  margin: 0;
  padding: 0;

  overflow: hidden;
  white-space: nowrap;
}

/*
 *  End of style specific bits
 */

/*
 *  Recommended CSS for syntax highlighting generation
 *
 */
pre {
  overflow: auto;
}

pre[data-linenos] {
  padding: 1rem 0;
}

pre table td {
  padding: 0;
}

pre table td:nth-of-type(1) {
  text-align: center;
  user-select: none;
}

pre mark {
  display: block;
  background-color: rgba(254, 252, 232, 0.9);
}

pre table {
  width: 100%;
  border-collapse: collapse;
}

/* End of recommendation */

/*
 *  May not need this but its a good practice for people that may want to print
 *  out code segments (such as to PDF) and need to be able to see the entirety
 *  of code segments.
 */
@media print {
  pre { white-space: pre-wrap; }
}

